[B]Retrospect v4.1.8.5 - Changelog - 2019-03-03[/B]

!! Due to the changing of the add-on ID, there is an extra add-on data migration step required. This happens as soon as you install the new version. !!

[B]Framework related[/B]
* Changed: use paste.kodi.tv for posting log files (1 MB limit)
* Fixed: properly clean cache

[B]GUI/Settings/Language related[/B]
-

[B]Channel related[/B]
-